@@ -1,3 +1,10 @@
+Thu Feb 13 15:43:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (IDSET_ATTRSET_FOR_INTERN): fix off-by-one bug.
+
+	* parse.y (rb_enc_symname_type): junk ID succeeded by '=' is also
+	  attrset ID.  [ruby-core:60668] [Bug #8756]
+
 Thu Feb 13 11:06:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in: check if pthread_setname_np is available.
